--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,9 @@
 .Footer {
   margin: 0;
   padding: 0;
-  background-color: rebeccapurple;
   width: 100%;
   height: 10vh;
+  background-color: #3f51b5;
 }
 
 .Footer p {
